[project]
name = "researcher-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.10.0",
    "deepagents>=0.3.9",
    "ipykernel>=7.1.0",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-mistralai>=1.1.1",
    "langgraph>=1.0.7",
    "langgraph-supervisor>=0.0.31",
    "wikipedia>=1.4.0",
]
